# dolphindes

./: .coverage  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  README.md  dolphindes.yml  pyproject.toml
.github/workflows/: build.yml  daily_checks.yml  pr_checks.yml  publish.yml  quality.yml  tests.yml
docs/: conf.py  dolphindes.cvxopt.rst  dolphindes.maxwell.rst  dolphindes.photonics.rst  dolphindes.rst  dolphindes.util.rst  examples  index.rst  modules.rst  tutorials.rst
dolphindes/: __init__.py  types.py
dolphindes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dolphindes/cvxopt/: __init__.py  _base_qcqp.py  gcd.py  optimization.py  qcqp.py  verlan.py
dolphindes/geometry/: __init__.py  geometry.py
dolphindes/maxwell/: __init__.py  jax_fdfd.py  maxwell_fdfd.py  maxwell_polar_fdfd.py
dolphindes/photonics/: __init__.py  _base_photonics.py  photonics.py  scrape_chi_gcd.py  verlan.py
dolphindes/util/: __init__.py  file_utils.py  math_utils.py  projectors.py  validation.py
examples/: custom_maxwell_solver.ipynb
examples/limits/: LDOS.ipynb  LDOS_gcd.ipynb  LDOS_polar.ipynb  LDOS_polar_lossless.ipynb  planewave_absorption.ipynb  singular_values.ipynb
examples/solvers/: jax_inverse_design_absorption.ipynb
examples/verlan/: LDOS_verlan.ipynb  LDOS_verlan_part1.ipynb  LDOS_verlan_part2.ipynb  verlan_topopt_comparison.ipynb
tests/: conftest.py  test_factorization_cache.py  test_fdfd.py  test_fdfd_jax.py  test_jax_fdfd.py  test_maxwell.py  test_optimization.py  test_penalty_derivatives.py  test_photonics.py  test_polar_fdfd.py  test_polar_fdfd_jax.py  test_polar_photonics.py  test_qcqp.py  test_utils.py  test_validation.py
